# medguide-ai

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
mcp-client/: client.py  graph.py  mcp_config.json  memory.json
mcp-servers/: get_image.py  test_vectorize_mcp_setup.py  vectorize_mcp.py
mcp-servers/data/vectorstore.db/: chroma.sqlite3
