[project]
name = "medguide-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "langchain-anthropic>=0.3.15",
    "langchain-chroma>=0.2.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langchain[google-genai]>=0.3.26",
    "langgraph>=0.4.8",
    "mcp-use>=1.3.1",
    "mcp[cli]>=1.9.4",
    "nest-asyncio>=1.6.0",
    "ollama>=0.5.1",
    "pymupdf>=1.26.1",
    "streamlit>=1.46.0",
]
