[project]
name = "medguide-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.13",
    "httpx>=0.28.1",
    "langchain-anthropic>=0.3.15",
    "langchain-ollama>=0.3.3",
    "langchain[google-genai]>=0.3.26",
    "mcp-use>=1.3.1",
    "mcp[cli]>=1.9.4",
    "ollama>=0.5.1",
]
